tests/tests/checks/snapshots/analysis/cpp/bug1781178.cpp/check_glob@Foo_E.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
snapshot_kind: text
---
[
  {
    "loc": "00013:7-8",
    "source": 1,
    "nestingRange": "13:9-13:17",
    "syntax": "def,type",
    "pretty": "type Foo::E",
    "sym": "T_Foo::E"
  },
  {
    "loc": "00013:7-8",
    "target": 1,
    "kind": "def",
    "pretty": "Foo::E",
    "sym": "T_Foo::E",
    "context": "Foo",
    "contextsym": "T_Foo",
    "peekRange": "13-13"
  },
  {
    "loc": "00035:10-11",
    "source": 1,
    "syntax": "use,type",
    "type": "enum Foo::E",
    "typesym": "T_Foo::E",
    "pretty": "type Foo::E",
    "sym": "T_Foo::E"
  },
  {
    "loc": "00035:10-11",
    "target": 1,
    "kind": "use",
    "pretty": "Foo::E",
    "sym": "T_Foo::E",
    "context": "Foo::Bar",
    "contextsym": "_ZN3Foo3BarEv"
  },
  {
    "loc": "00070:20-21",
    "source": 1,
    "syntax": "use,type",
    "type": "enum Foo<int>::E",
    "typesym": "T_Foo::E",
    "pretty": "type Foo::E",
    "sym": "T_Foo::E"
  },
  {
    "loc": "00070:20-21",
    "target": 1,
    "kind": "use",
    "pretty": "Foo::E",
    "sym": "T_Foo::E",
    "context": "func",
    "contextsym": "_Z4funcv"
  }
]
