tests/tests/checks/snapshots/analysis/cpp/bug1781178.cpp/check_glob@Foo_E_Waldo.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
---
[
  {
    "loc": "00013:4-9",
    "source": 1,
    "syntax": "def,enum constant",
    "type": "enum Foo::E",
    "typesym": "T_Foo::E",
    "pretty": "enum constant Foo::E::Waldo",
    "sym": "E_<T_Foo::E>_Waldo"
  },
  {
    "loc": "00013:4-9",
    "target": 1,
    "kind": "def",
    "pretty": "Foo::E::Waldo",
    "sym": "E_<T_Foo::E>_Waldo",
    "context": "Foo::E",
    "contextsym": "T_Foo::E"
  },
  {
    "loc": "00036:13-18",
    "source": 1,
    "syntax": "use,enum",
    "type": "enum Foo::E",
    "typesym": "T_Foo::E",
    "pretty": "enum Foo::E::Waldo",
    "sym": "E_<T_Foo::E>_Waldo"
  },
  {
    "loc": "00036:13-18",
    "target": 1,
    "kind": "use",
    "pretty": "Foo::E::Waldo",
    "sym": "E_<T_Foo::E>_Waldo",
    "context": "Foo::Bar",
    "contextsym": "_ZN3Foo3BarEv"
  }
]
