tests/tests/checks/snapshots/analysis/cpp/bug1781178.cpp/check_glob@Foo_Nested_field.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
snapshot_kind: text
---
[
  {
    "loc": "00009:8-13",
    "source": 1,
    "syntax": "def,field",
    "type": "int",
    "pretty": "field Foo::Nested::field",
    "sym": "F_<T_Foo::Nested>_field"
  },
  {
    "loc": "00009:8-13",
    "target": 1,
    "kind": "def",
    "pretty": "Foo::Nested::field",
    "sym": "F_<T_Foo::Nested>_field",
    "context": "Foo::Nested",
    "contextsym": "T_Foo::Nested",
    "peekRange": "9-9"
  },
  {
    "loc": "00033:17-22",
    "source": 1,
    "syntax": "use,field",
    "type": "int",
    "pretty": "field Foo::Nested::field",
    "sym": "F_<T_Foo::Nested>_field"
  },
  {
    "loc": "00033:17-22",
    "target": 1,
    "kind": "use",
    "pretty": "Foo::Nested::field",
    "sym": "F_<T_Foo::Nested>_field",
    "context": "Foo::Bar",
    "contextsym": "_ZN3Foo3BarEv"
  }
]
