tests/tests/checks/snapshots/analysis/cpp/bug1781178.cpp/check_glob@Foo_Simple.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
---
[
  {
    "loc": "00016:7-13",
    "source": 1,
    "syntax": "decl,function",
    "type": "void (void)",
    "pretty": "function Foo::Simple",
    "sym": "_ZN3Foo6SimpleEv"
  },
  {
    "loc": "00016:7-13",
    "target": 1,
    "kind": "decl",
    "pretty": "Foo::Simple",
    "sym": "_ZN3Foo6SimpleEv",
    "context": "Foo",
    "contextsym": "T_Foo",
    "peekRange": "16-16"
  },
  {
    "loc": "00032:10-16",
    "source": 1,
    "syntax": "use,function",
    "type": "void (void)",
    "pretty": "function Foo::Simple",
    "sym": "_ZN3Foo6SimpleEv"
  },
  {
    "loc": "00032:10-16",
    "target": 1,
    "kind": "use",
    "pretty": "Foo::Simple",
    "sym": "_ZN3Foo6SimpleEv",
    "context": "Foo::Bar",
    "contextsym": "_ZN3Foo3BarEv"
  }
]
