tests/tests/checks/snapshots/analysis/cpp/bug1781178.cpp/check_glob@Foo_Static.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
---
[
  {
    "loc": "00017:14-20",
    "source": 1,
    "syntax": "decl,function",
    "type": "void (void)",
    "pretty": "function Foo::Static",
    "sym": "_ZN3Foo6StaticEv"
  },
  {
    "loc": "00017:14-20",
    "target": 1,
    "kind": "decl",
    "pretty": "Foo::Static",
    "sym": "_ZN3Foo6StaticEv",
    "context": "Foo",
    "contextsym": "T_Foo",
    "peekRange": "17-17"
  },
  {
    "loc": "00041:16-22",
    "source": 1,
    "syntax": "use,function",
    "type": "void (void)",
    "pretty": "function Foo::Static",
    "sym": "_ZN3Foo6StaticEv"
  },
  {
    "loc": "00041:16-22",
    "target": 1,
    "kind": "use",
    "pretty": "Foo::Static",
    "sym": "_ZN3Foo6StaticEv",
    "context": "Foo::Baz",
    "contextsym": "_ZN3Foo3BazEv"
  }
]
