tests/tests/checks/snapshots/analysis/cpp/bug1781178.cpp/check_glob@Foo_Typedef.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
---
[
  {
    "loc": "00044:8-15",
    "source": 1,
    "syntax": "alias,type",
    "type": "int",
    "pretty": "type Foo::Typedef",
    "sym": "TA_Foo::Typedef"
  },
  {
    "loc": "00044:8-15",
    "target": 1,
    "kind": "alias",
    "pretty": "Foo::Typedef",
    "sym": "TA_Foo::Typedef",
    "context": "Foo",
    "contextsym": "T_Foo"
  },
  {
    "loc": "00052:57-64",
    "source": 1,
    "syntax": "use,type",
    "type": "int",
    "pretty": "type Foo::Typedef",
    "sym": "TA_Foo::Typedef"
  },
  {
    "loc": "00052:57-64",
    "target": 1,
    "kind": "use",
    "pretty": "Foo::Typedef",
    "sym": "TA_Foo::Typedef",
    "context": "TemplateFunc",
    "contextsym": "_Z12TemplateFuncN3FooIT_E7TypedefE"
  }
]
