tests/tests/checks/snapshots/analysis/cpp/bug1781178.cpp/check_glob@Point_IsThereOne.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
---
[
  {
    "loc": "00002:7-17",
    "source": 1,
    "syntax": "decl,function",
    "type": "_Bool (void)",
    "pretty": "function Point::IsThereOne",
    "sym": "_ZN5Point10IsThereOneEv"
  },
  {
    "loc": "00002:7-17",
    "target": 1,
    "kind": "decl",
    "pretty": "Point::IsThereOne",
    "sym": "_ZN5Point10IsThereOneEv",
    "context": "Point",
    "contextsym": "T_Point",
    "peekRange": "2-2"
  },
  {
    "loc": "00047:4-14",
    "source": 1,
    "syntax": "use,function",
    "type": "_Bool (void)",
    "pretty": "function Point::IsThereOne",
    "sym": "_ZN5Point10IsThereOneEv"
  },
  {
    "loc": "00047:4-14",
    "target": 1,
    "kind": "use",
    "pretty": "Point::IsThereOne",
    "sym": "_ZN5Point10IsThereOneEv",
    "context": "TemplateFunc",
    "contextsym": "_Z12TemplateFuncv"
  }
]
