tests/tests/checks/snapshots/analysis/cpp/bug1781178.cpp/check_glob@internal_Read.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
snapshot_kind: text
---
[
  {
    "loc": "00048:5-9",
    "source": 1,
    "syntax": "decl,function",
    "type": "void (void)",
    "pretty": "function internal::Read",
    "sym": "_ZN8internal4ReadEv"
  },
  {
    "loc": "00048:5-9",
    "target": 1,
    "kind": "decl",
    "pretty": "internal::Read",
    "sym": "_ZN8internal4ReadEv",
    "peekRange": "48-48"
  },
  {
    "loc": "00058:2-6",
    "source": 1,
    "syntax": "use,function",
    "type": "void (void)",
    "pretty": "function internal::Read",
    "sym": "_ZN8internal4ReadEv",
    "confidence": [
      "cppTemplateHeuristic"
    ]
  },
  {
    "loc": "00058:2-6",
    "target": 1,
    "kind": "use",
    "pretty": "internal::Read",
    "sym": "_ZN8internal4ReadEv",
    "context": "TemplateFunc",
    "contextsym": "_Z12TemplateFuncN3FooIT_E7TypedefE"
  }
]
