tests/tests/checks/snapshots/analysis/cpp/bug1781178.cpp/main@Foo_E.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
input_file: inputs/analysis/cpp/bug1781178.cpp/Foo_E
---
[
  {
    "loc": "00013:7-8",
    "target": 1,
    "kind": "def",
    "pretty": "Foo::E",
    "sym": "T_Foo::E",
    "context": "Foo",
    "contextsym": "T_Foo",
    "peekRange": "13-13"
  },
  {
    "loc": "00035:10-11",
    "target": 1,
    "kind": "use",
    "pretty": "Foo::E",
    "sym": "T_Foo::E",
    "context": "Foo::Bar",
    "contextsym": "_ZN3Foo3BarEv"
  },
  {
    "loc": "00071:20-21",
    "target": 1,
    "kind": "use",
    "pretty": "Foo::E",
    "sym": "T_Foo::E",
    "context": "func",
    "contextsym": "_Z4funcv"
  },
  {
    "loc": "00013:7-8",
    "source": 1,
    "syntax": "def,type",
    "pretty": "type Foo::E",
    "sym": "T_Foo::E",
    "nestingRange": "13:9-13:17"
  },
  {
    "loc": "00035:10-11",
    "source": 1,
    "syntax": "type,use",
    "pretty": "type Foo::E",
    "sym": "T_Foo::E",
    "type": "Foo::E",
    "typesym": "T_Foo::E"
  },
  {
    "loc": "00071:20-21",
    "source": 1,
    "syntax": "type,use",
    "pretty": "type Foo::E",
    "sym": "T_Foo::E",
    "type": "Foo<int>::E",
    "typesym": "T_Foo::E"
  }
]
