tests/tests/checks/snapshots/analysis/cpp/bug1781178.cpp/main@Foo_E_Waldo.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
input_file: inputs/analysis/cpp/bug1781178.cpp/Foo_E_Waldo
---
[
  {
    "loc": "00013:11-16",
    "target": 1,
    "kind": "def",
    "pretty": "Foo::E::Waldo",
    "sym": "E_<T_Foo::E>_Waldo",
    "context": "Foo::E",
    "contextsym": "T_Foo::E"
  },
  {
    "loc": "00035:13-18",
    "target": 1,
    "kind": "use",
    "pretty": "Foo::E::Waldo",
    "sym": "E_<T_Foo::E>_Waldo",
    "context": "Foo::Bar",
    "contextsym": "_ZN3Foo3BarEv"
  },
  {
    "loc": "00071:23-28",
    "target": 1,
    "kind": "use",
    "pretty": "Foo::E::Waldo",
    "sym": "E_<T_Foo::E>_Waldo",
    "context": "func",
    "contextsym": "_Z4funcv"
  },
  {
    "loc": "00013:11-16",
    "source": 1,
    "syntax": "def,enum constant",
    "pretty": "enum constant Foo::E::Waldo",
    "sym": "E_<T_Foo::E>_Waldo",
    "type": "enum Foo::E",
    "typesym": "T_Foo::E"
  },
  {
    "loc": "00035:13-18",
    "source": 1,
    "syntax": "enum,use",
    "pretty": "enum Foo::E::Waldo",
    "sym": "E_<T_Foo::E>_Waldo",
    "type": "enum Foo::E",
    "typesym": "T_Foo::E",
    "confidence": [
      "cppTemplateHeuristic"
    ]
  },
  {
    "loc": "00071:23-28",
    "source": 1,
    "syntax": "enum,use",
    "pretty": "enum Foo::E::Waldo",
    "sym": "E_<T_Foo::E>_Waldo",
    "type": "enum Foo<int>::E",
    "typesym": "T_Foo::E"
  }
]
